# AoD

./: CMakeLists.txt  README.md
src/: handledata.cpp  handledata.hpp  main.cpp  tools.cpp  tools.hpp
xHacking/include/xhacking/Detour/: Detour.h  Detour_i.h
xHacking/include/xhacking/Memory/: Memory.h
xHacking/include/xhacking/Utilities/: Utilities.h
xHacking/lib/: xHacking_d.lib
